Add services section with service cards and icons; include GIFs for each service

--- a/index.html
+++ b/index.html
@@ -147,6 +147,36 @@
         </div>
     </section>
 
+    <section class="services-section">
+        <h2 class="services-title">OUR SERVICES</h2>
+        <div class="services-grid container">
+            <div class="service-card">
+                <img src="./assets/images/gifs/path-to-your-translations.gif" alt="Translations" class="service-image">
+                <img src="./assets/images/icons/path-to-icon1.svg" alt="Icon" class="service-icon">
+                <div class="service-content">
+                    <h3>Translati<span>o</span>ns</h3>
+                    <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+                </div>
+            </div>
+            <div class="service-card">
+                <img src="./assets/images/gifs/path-to-your-adaptions.gif" alt="Adaptions" class="service-image">
+                <img src="./assets/images/icons/path-to-icon2.svg" alt="Icon" class="service-icon">
+                <div class="service-content">
+                    <h3>Adapti<span>o</span>ns</h3>
+                    <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+                </div>
+            </div>
+            <div class="service-card">
+                <img src="./assets/images/gifs/path-to-your-branding.gif" alt="Branding" class="service-image">
+                <img src="./assets/images/icons/path-to-icon3.svg" alt="Icon" class="service-icon">
+                <div class="service-content">
+                    <h3>Br<span>a</span>nding</h3>
+                    <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
