Add Tata brand icon SVG to assets/images/brand-icons

--- a/index.html
+++ b/index.html
@@ -177,6 +177,37 @@
         </div>
     </section>
 
+    <section class="clients-circle-section">
+        <div class="circle-wrapper container">
+            <div class="circle-center">
+                <h2>10+ Clients</h2>
+            </div>
+
+            <!-- Surrounding logos -->
+            <img src="./assets/images/brand-icons/bosh.svg" class="brand-logo logo-1" alt="Bosch">
+            <img src="./assets/images/brand-icons/google.svg" class="brand-logo logo-2" alt="Google">
+            <img src="./assets/images/brand-icons/sony.svg" class="brand-logo logo-3" alt="Sony">
+            <img src="./assets/images/brand-icons/tata.svg" class="brand-logo logo-4" alt="Tata">
+            <img src="./assets/images/brand-icons/adidas.svg" class="brand-logo logo-5" alt="Adidas">
+            <img src="./assets/images/brand-icons/hyundai.svg" class="brand-logo logo-6" alt="Hyundai">
+            <img src="./assets/images/brand-icons/icici.svg" class="brand-logo logo-7" alt="ICICI">
+            <img src="./assets/images/brand-icons/infosys.svg" class="brand-logo logo-8" alt="Infosys">
+            <img src="./assets/images/brand-icons/lt.svg" class="brand-logo logo-9" alt="L&T">
+            <img src="./assets/images/brand-icons/reliance.svg" class="brand-logo logo-10" alt="Reliance">
+            <img src="./assets/images/brand-icons/airtel.svg" class="brand-logo logo-11" alt="Airtel">
+            <img src="./assets/images/brand-icons/croma.svg" class="brand-logo logo-12" alt="Croma">
+            <img src="./assets/images/brand-icons/hindustan-unilever-ltd.svg" class="brand-logo logo-13" alt="HUL">
+            <img src="./assets/images/brand-icons/bajaj.svg" class="brand-logo logo-14" alt="Bajaj">
+            <img src="./assets/images/brand-icons/mahindra.svg" class="brand-logo logo-15" alt="Mahindra">
+            <img src="./assets/images/brand-icons/jio.svg" class="brand-logo logo-16" alt="Jio">
+            <img src="./assets/images/brand-icons/adani.svg" class="brand-logo logo-17" alt="Adani">
+            <img src="./assets/images/brand-icons/aditya-birla.svg" class="brand-logo logo-18" alt="Aditya Birla">
+            <img src="./assets/images/brand-icons/jsw.svg" class="brand-logo logo-19" alt="JSW">
+            <img src="./assets/images/brand-icons/itc.svg" class="brand-logo logo-20" alt="ITC">
+        </div>
+    </section>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
