--- a/index.html
+++ b/index.html
@@ -207,7 +207,39 @@
         </div>
     </section>
 
+    <section class="testimonials-section">
+        <div class="container">
+            <h2 class="text-white mb-5 text-center">Testimonials</h2>
 
+            <div class="testimonial-card mx-auto position-relative">
+                <!-- Border SVG overlaid using absolute wrapper -->
+                <div class="border-overlay">
+                    <img src="./assets/images/testimonial-img/card-border.svg" alt="Card Border" />
+                </div>
+
+                <div class="testimonial-content text-center">
+                    <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                    <h4 class="text-dark">Mankind</h4>
+
+                    <div class="ratings mb-2">
+                        <i class="fas text-warning fa-star"></i>
+                        <i class="fas text-warning fa-star"></i>
+                        <i class="fas text-warning fa-star"></i>
+                        <i class="fas text-warning fa-star"></i>
+                        <i class="fas text-warning fa-star-half-alt"></i>
+                    </div>
+
+                    <p class="text-dark small px-2">
+                        Tring's ad creatives were truly innovative and resulted in impactful and memorable visuals
+                        that captured our brand's essence brilliantly.
+                    </p>
+                </div>
+
+                <!-- Stamp -->
+                <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
