Add testimonial section with Swiper integration and responsive styles

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
 </head>
 
@@ -208,39 +210,233 @@
     </section>
 
     <section class="testimonials-section">
-        <div class="container">
-            <h2 class="text-white mb-5 text-center">Testimonials</h2>
-
-            <div class="testimonial-card mx-auto position-relative">
-                <!-- Border SVG overlaid using absolute wrapper -->
-                <div class="border-overlay">
-                    <img src="./assets/images/testimonial-img/card-border.svg" alt="Card Border" />
-                </div>
-
-                <div class="testimonial-content text-center">
-                    <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
-                    <h4 class="text-dark">Mankind</h4>
-
-                    <div class="ratings mb-2">
-                        <i class="fas text-warning fa-star"></i>
-                        <i class="fas text-warning fa-star"></i>
-                        <i class="fas text-warning fa-star"></i>
-                        <i class="fas text-warning fa-star"></i>
-                        <i class="fas text-warning fa-star-half-alt"></i>
+        <h2 class="text-white mb-5">Testimonials</h2>
+        <div class="swiper testimonial-swiper">
+            <div class="swiper-wrapper">
+                <!-- Repeat this .swiper-slide for 6 cards -->
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
                     </div>
-
-                    <p class="text-dark small px-2">
-                        Tring's ad creatives were truly innovative and resulted in impactful and memorable visuals
-                        that captured our brand's essence brilliantly.
-                    </p>
                 </div>
-
-                <!-- Stamp -->
-                <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="testimonial-card">
+                        <div class="border-overlay">
+                            <img src="./assets/images/testimonial-img/card-border.svg" alt="">
+                        </div>
+                        <div class="testimonial-content text-center">
+                            <img src="./assets/images/testimonial-img/avatar.png" alt="Avatar" class="avatar-img mb-3">
+                            <h4 class="text-dark">Mankind</h4>
+                            <div class="ratings mb-2">
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star"></i>
+                                <i class="fas text-warning fa-star-half-alt"></i>
+                            </div>
+                            <p class="text-dark small px-2">
+                                Tring's ad creatives were truly innovative and resulting in impactful and memorable
+                                visuals
+                                that captured our brand's essence brilliantly.
+                            </p>
+                        </div>
+                        <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
+                    </div>
+                </div> 
+                <!-- ... repeat for other 5 cards -->
             </div>
         </div>
     </section>
-
+ 
+    
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
