--- a/index.html
+++ b/index.html
@@ -429,13 +429,46 @@
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
                     </div>
-                </div> 
+                </div>
                 <!-- ... repeat for other 5 cards -->
             </div>
         </div>
     </section>
- 
-    
+
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 text-start">
+                    <ul class="footer-links">
+                        <li><a href="#">Work</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Tools</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 copyright-txt d-flex flex-column align-items-center justify-content-end">
+                    <a href="" class="text-white">privacy policy</a>
+                    <p>
+                        Copyright © 2025 Tring Creatives.
+                    </p>
+                </div>
+                <div class="col-lg-4 d-flex flex-column align-items-center justify-content-end">
+                    <button class="back-to-top d-flex flex-column align-items-center justify-content-end" onclick="scrollToTop()">
+                        <span class="arrow-up">&#8593;</span>
+                        <span>Back to Top</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <script>
+        function scrollToTop() {
+            window.scrollTo({ top: 0, behavior: 'smooth' });
+        }
+
+    </script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
