Update layout and styles for improved responsiveness and visual hierarchy

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
 
     <section class="services-section">
-        <h2 class="services-title">OUR SERVICES</h2>
+        <h2 class="services-title fs-1">OUR SERVICES</h2>
         <div class="services-grid container">
             <div class="service-card">
                 <img src="./assets/images/gifs/path-to-your-translations.gif" alt="Translations" class="service-image">
