--- a/index.html
+++ b/index.html
@@ -469,7 +469,9 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="d-flex justify-content-center justify-content-lg-end">
                         <button class="back-to-top" onclick="scrollToTop()">
-                            <div class="arrow-up">↑</div>
+                            <div class="arrow-up">
+                                <i class="fa-solid fa-arrow-up"></i>
+                            </div>
                             <span class="back-to-top-text">Back to Top</span>
                         </button>
                     </div>
