Implement code changes to enhance functionality and improve performance

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         </p>
                         <h1 class="hero-title">
                             <span class="language-slider" id="languageSlider">
-                                <span class="language-text">TRING</span>
+                                <span class="language-text txt-style-amagro">TRING</span>
                                 <span class="language-text">ट्रिंग</span>
                                 <span class="language-text">ટ્રીંગ</span>
                                 <span class="language-text">ত্রিং</span>
