update frontend UI

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
@@ -98,7 +98,7 @@
                     <img src="./assets/images/icons/star-icon.svg" alt="Star Icon" class="star-icon" />
                 </div>
             </div>
-            <div class="d-flex justify-content-between">
+            <div class="d-flex justify-content-between global-voice-info">
                 <div class="col-lg-4">
                     <h3>Unlocking <br> Global Markets </h3>
                 </div>
@@ -179,7 +179,7 @@
     <section class="clients-circle-section">
         <div class="circle-wrapper container">
             <div class="circle-center">
-                <h2>10+ Clients</h2>
+                <h2>100+ Clients</h2>
             </div>
 
             <!-- Surrounding logos -->
