update mobile view

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="stylesheet" href="./assets/css/responsive.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
@@ -80,7 +80,7 @@
             <img src="./assets/images/banner/hero-img.png" class="hero-main-image img-fluid"
                 alt="Tring Creatives Hero Image">
         </div>
-    </section> 
+    </section>
 
     <section class="full-bg-section">
         <img src="./assets/images/gifs/background-loop.gif" alt="Background" class="bg-gif" />
@@ -444,7 +444,7 @@
 
         <div class="container footer-content">
             <div class="row h-100 align-items-end">
-                <div class="col-lg-4 col-md-12">
+                <div class="col-lg-4 col-md-12 col-6">
                     <ul class="footer-links">
                         <li><a href="#" data-text="Work">Work</a></li>
                         <li><a href="#" data-text="Services">Services</a></li>
@@ -453,7 +453,16 @@
                         <li><a href="#" data-text="Contact">Contact</a></li>
                     </ul>
                 </div>
-
+                <div class="col-lg-4 col-md-6 col-6 d-block d-lg-none">
+                    <div class="d-flex justify-content-center justify-content-lg-end">
+                        <button class="back-to-top" onclick="scrollToTop()">
+                            <div class="arrow-up">
+                                <i class="fa-solid fa-arrow-up"></i>
+                            </div>
+                            <span class="back-to-top-text">Back to Top</span>
+                        </button>
+                    </div>
+                </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="copyright-section">
                         <a href="#" class="privacy-link">Privacy Policy</a>
@@ -463,7 +472,7 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-4 col-md-6 d-lg-block d-none">
                     <div class="d-flex justify-content-center justify-content-lg-end">
                         <button class="back-to-top" onclick="scrollToTop()">
                             <div class="arrow-up">
