--- a/index.html
+++ b/index.html
@@ -20,33 +20,71 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg py-3">
                 <div class="container-fluid">
+
+                    <!-- Logo -->
                     <a class="navbar-brand" href="#">
-                        <img src="./assets/images/logo/logo.svg" class="logo" alt="Tring Creatives">
+                        <img src="./assets/images/logo/logo.svg" class="logo" alt="Tring Creatives" height="40">
                     </a>
-                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false"
-                        aria-label="Toggle navigation">
-                        <i class="fas fa-bars text-white"></i>
+
+                    <!-- Hamburger / Offcanvas Trigger -->
+                    <button class="navbar-toggler border-0" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-label="Toggle navigation">
+                        <i class="fas fa-bars text-white fa-lg"></i>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarScroll">
-                        <ul class="navbar-nav glassy-nav mx-auto my-2 my-lg-0">
+
+                    <!-- Desktop Nav (Hidden on mobile) -->
+                    <div class="collapse navbar-collapse d-none d-lg-flex justify-content-between">
+                        <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Services</a>
+                                <a class="nav-link text-white" href="#">Services</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Tools</a>
+                                <a class="nav-link text-white" href="#">Tools</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">FAQ</a>
+                                <a class="nav-link text-white" href="#">FAQ</a>
                             </li>
                         </ul>
-                        <div class="d-flex">
-                            <a href="#" class="btn-contact">Contact</a>
+                        <a href="#" class="btn btn-warning">Contact</a>
+                    </div>
+
+                    <!-- Offcanvas (Mobile Nav) -->
+                    <div class="offcanvas offcanvas-end offcanvas-bg" tabindex="-1" id="mobileMenu"
+                        aria-labelledby="mobileMenuLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="mobileMenuLabel">
+                                <a class="navbar-brand" href="#">
+                                    <img src="./assets/images/logo/logo.svg" class="logo" alt="Tring Creatives"
+                                        height="40">
+                                </a>
+                            </h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">Tools</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="#">FAQ</a>
+                                </li>
+                            </ul>
+                            <div class="d-grid mt-4">
+                                <a href="#" class="btn btn-warning">Contact</a>
+                            </div>
                         </div>
                     </div>
+
                 </div>
             </nav>
         </div>
